--- a/collections/_Aa/Lorcon2_Functions.html
+++ b/collections/_Aa/Lorcon2_Functions.html
@@ -8,3 +8,5 @@ footer: false
 Lorcon2 in Air::Legacy
 ====================================
 
+Lorcon2 was the first starting point for the development of Air::Legacy, everything started from one of the simplest Lorcon2's function:
+"lorcon_inject"
