--- a/collections/_Aa/Lorcon2_Functions.html
+++ b/collections/_Aa/Lorcon2_Functions.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /collections/_Aa/Lorcon2_Functions.md
+permalink: /collections/_Aa/Lorcon2_Functions.html
 toc: false
 footer: false
 ---
