--- a/collections/_Aa/Lorcon2_Functions.html
+++ b/collections/_Aa/Lorcon2_Functions.html
@@ -5,8 +5,6 @@ toc: false
 footer: false
 ---
 
-Lorcon2 in Air::Legacy
-====================================
-
-Lorcon2 was the first starting point for the development of Air::Legacy, everything started from one of the simplest Lorcon2's function:
-"lorcon_inject"
+<h1 id="lorcon2-in-air-legacy">Lorcon2 in Air::Legacy</h1>
+<p>Lorcon2 was the first starting point for the development of Air::Legacy, everything started from one of the simplest Lorcon2&#39;s function:
+&quot;lorcon_inject&quot;</p>
