--- a/collections/_Bb/Airpcap_Functions.html
+++ b/collections/_Bb/Airpcap_Functions.html
@@ -5,5 +5,5 @@ toc: false
 footer: false
 ---
 
-Airpcap Functions
-============================
+
+<h1 id="airpcap-functions">Airpcap Functions</h1>
