--- a/collections/_Aa/Lorcon2_Functions.html
+++ b/collections/_Aa/Lorcon2_Functions.html
@@ -4,6 +4,7 @@ permalink: /collections/_Aa/Lorcon2_Functions.html
 toc: false
 footer: false
 ---
+<img src="https://media.giphy.com/media/cHLLRNVaqALxCv1Kgb/giphy.gif" alt="drawing" width="2000"/>
 
 <h1 id="lorcon2-in-air-legacy">Lorcon2 in Air::Legacy</h1>
 <p>Lorcon2 was the first starting point for the development of Air::Legacy, everything started from one of the simplest Lorcon2&#39;s function:
