--- a/collections/_Jj/Why_not_stop_to_lorcon2.html
+++ b/collections/_Jj/Why_not_stop_to_lorcon2.html
@@ -1,3 +1,11 @@
+---
+layout: default
+permalink: /collections/_Jj/Why_not_stop_to_lorcon2.html
+toc: false
+footer: false
+alias: Why not stop to Lorcon2?
+---
+
 <h1 id="why-not-stop-to-lorcon2-">Why not stop to Lorcon2?</h1>
 <p>Lorcon2 is a great library, it offers a good abstraction which permits to interact with drivers and use them for sending packets or from sniff data, the only problem is that the possible attack scenarios with (the old) Air::Lorcon2 were reduced, this isn&#39;t good.. More attack can be used, more the efficency growns.</p>
 
