--- a/collections/_Jj/Why "Legacy"?.html
+++ b/collections/_Jj/Why "Legacy"?.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /collections/_Jj/Why "Legacy"?.html
+permalink: /collections/_Jj/Why_"Legacy"?.html
 toc: false
 footer: false
 alias: Why not stop to Lorcon2?
