Update can I effectively break the latest wireless security protocols using this library?.html

--- a/collections/_Jj/can I effectively break the latest wireless security protocols using this library?.html
+++ b/collections/_Jj/can I effectively break the latest wireless security protocols using this library?.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /collections/_Jj/can I effectively break the latest wireless security protocols using this library?.html
+permalink: /collections/_Jj/can_I_effectively_break _the_latest_wireless_security_protocols_using_this_library?.html
 toc: false
 footer: false
 alias: Why not stop to Lorcon2?
