--- a/collections/_Jj/Why (not) Python?.html
+++ b/collections/_Jj/Why (not) Python?.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /collections/_Jj/Why (not) Python?.html
+permalink: /collections/_Jj/Why_(not)_Python?.html
 toc: false
 footer: false
 alias: Why not stop to Lorcon2?
