--- a/collections/_Hh/Net::Pcap.html
+++ b/collections/_Hh/Net::Pcap.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-permalink: /collections/_Aa/Lorcon2_Functions.html
+home_btn: false
+btn_text: true
+footer: true
 toc: false
 footer: false
 ---
