--- a/collections/_Hh/Net::Sharktools.html
+++ b/collections/_Hh/Net::Sharktools.html
@@ -1,3 +1,12 @@
+---
+layout: default
+home_btn: true
+btn_text: true
+footer: true
+toc: false
+footer: false
+---
+
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
 <pre><code>    use Net::Sharktools qw(perlshark_read);
