--- a/collections/_Hh/Nagios::NRPE.html
+++ b/collections/_Hh/Nagios::NRPE.html
@@ -7,6 +7,7 @@ toc: false
 footer: false
 ---
 
+<html>
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
 <pre><code> # Executing a check on an NRPE-Server
@@ -88,4 +89,6 @@ footer: false
 
   </div>
 </div>
+</html>
+
 <img src="https://media3.giphy.com/media/ADiOs8AqeverrAuT4Q/giphy.gif" alt="drawing" width="2000"/>
