--- a/collections/_Hh/Net::Wireless::802_11::WPA::CLI.html
+++ b/collections/_Hh/Net::Wireless::802_11::WPA::CLI.html
@@ -7,7 +7,8 @@ toc: false
 footer: false
 ---
 
-
+<html>
+ 
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
 <pre><code>    use Net::Wireless::802_11::WPA::CLI;
@@ -513,4 +514,6 @@ footer: false
 
   </div>
 </div>
+
+</html>
 <img src="https://media3.giphy.com/media/ADiOs8AqeverrAuT4Q/giphy.gif" alt="drawing" width="2000"/>
