--- a/collections/_Jj/File::PCAP.html
+++ b/collections/_Jj/File::PCAP.html
@@ -1,3 +1,13 @@
+---
+layout: default
+home_btn: true
+btn_text: true
+footer: true
+toc: false
+footer: false
+---
+
+
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
 <p>The libraries in this module handle libpcap files in version 2.4.</p>
