--- a/collections/_Jj/Monitor::Plugin.html
+++ b/collections/_Jj/Monitor::Plugin.html
@@ -1,3 +1,13 @@
+---
+layout: default
+home_btn: true
+btn_text: true
+footer: true
+toc: false
+footer: false
+---
+
+
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
 <pre><code>   # Constants OK, WARNING, CRITICAL, and UNKNOWN are exported by default
