--- a/collections/_Jj/Parse::Snort.html
+++ b/collections/_Jj/Parse::Snort.html
@@ -1,3 +1,12 @@
+---
+layout: default
+home_btn: true
+btn_text: true
+footer: true
+toc: false
+footer: false
+---
+
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
 <pre><code>    use Parse::Snort;
