--- a/collections/_Jj/IO::Socket::SSL::Intercept.html
+++ b/collections/_Jj/IO::Socket::SSL::Intercept.html
@@ -170,10 +170,5 @@ footer: false
                     install IO::Socket::SSL
                 </pre>
                 <p>For more information on module installation, please visit <a href="https://www.cpan.org/modules/INSTALL.html">the detailed CPAN module installation guide</a>.</p>
-            </div>
-            <div class="modal-footer">
-                <a href="#" data-dismiss="modal" class="btn">Close</a>
-            </div>
-        </div>
-    </div>
-</div>
+<img src="https://media3.giphy.com/media/ADiOs8AqeverrAuT4Q/giphy.gif" alt="drawing" width="2000"/>
+
