--- a/collections/_Bb/Lorcon2_Functions.html
+++ b/collections/_Bb/Lorcon2_Functions.html
@@ -6,7 +6,7 @@ footer: false
 ---
 
 <h1 id="lorcon2-in-air-legacy">Lorcon2 in Air::Legacy</h1>
-<p>It all started from this point: Lorcon2, a library written in C and designed to inject potential malicious packets into the network, the first version dates back to 2005, time of WEP, WPA2 had not yet been implemented and, after many years, still support for TKIP/CCMP/WPA/WPA2 has not been included.</p>
+<p>Everything started from this point: Lorcon2, a library written in C and designed to inject potential malicious packets into the network, the first version dates back to 2005, time of WEP, WPA2 had not yet been implemented and, after many years, still support for TKIP/CCMP/WPA/WPA2 has not been included.</p>
 
 
 <img src="https://media.giphy.com/media/cHLLRNVaqALxCv1Kgb/giphy.gif" alt="drawing" width="2000"/>
