--- a/collections/_Bb/Lorcon2_Functions.html
+++ b/collections/_Bb/Lorcon2_Functions.html
@@ -512,7 +512,6 @@ Air::Legacy presents a new version of Lorcon, which is advancing very slowly but
 </code></pre>
 <p>as you may see, there is a great mixure from each version of Lorcon2, in general we can divide them in 3 major groups:</p>
 <p><strong>Original Lorcon2&#39;s Functions</strong></p>
-<p>_this include API function, usefull for injecting packet, sniffing from multiple interfaces, driver auto-detection, &quot;if&quot; functions, which are taken directly from wireless-tools and direct- driver  send function, from a lower level perspective</p>
-
+<p><em>this include API function, usefull for injecting packet, sniffing from multiple interfaces, driver auto-detection, &quot;if&quot; functions, which are taken directly from wireless-tools and direct- driver  send function, from a lower level perspective</em></p>
 
 <img src="https://media.giphy.com/media/cHLLRNVaqALxCv1Kgb/giphy.gif" alt="drawing" width="2000"/>
